# flowClust

./: .gitignore  DESCRIPTION  NAMESPACE  NEWS  README  README.md  aclocal.m4  cleanup  configure  configure.ac
R/: SetClasses.R  SetMethods.R  SimulateMixture.R  coerce.R  flowClust-package.R  flowClust.R  hist.R  miscellaneous.R  mkPriors.R  peakMatch.R  plot.R  split.R
data/: rituximab.RData
inst/: CITATION  README
inst/doc/: flowClust.Rnw
man/: BIC.Rd  Map.Rd  SimulateMixture.Rd  Subset.Rd  box.Rd  density.Rd  dmvt.Rd  dmvtmix.Rd  flowClust-internal.Rd  flowClust-package.Rd  flowClust.Rd  flowClust.den.Rd  flowClust2Prior.Rd  hist.Rd  miscellaneous.Rd  mkPrior-methods.Rd  mkPrior.Rd  mkPriorTree.Rd  peakMatch.Rd  plot.Rd  plot.flowClust.Rd  plot.flowCore.Rd  plot.flowDens.Rd  plotPrior.Rd  posterior.Rd  rbox.Rd  rituximab.Rd  ruleOutliers.Rd  show.flowClust.Rd  show.tmixFilter.Rd  split.Rd  summary.Rd  tmixFilter.Rd
src/: BoxCox.c  BoxCoxPriors.c  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Nu.c  flowClust.c  flowClust.h  flowClustGaussian.c  ranMVNT.c
tests/: testthat.R
tests/testthat/: helper-lib.R  test_1d.R  test_1d_gated_data.R  test_2d.R
tools/: winlibs.R
vignettes/: flowClust.Rmd  flowClust.Rnw
